kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 8081
      targetPort: 8080
  type: ClusterIP
